syntax = "proto3";

option go_package = ".;eventpb";

service Api {
  rpc Publish(stream PublishRequest) returns (Empty) {}
  rpc Subscribe(SubscribeRequest) returns (stream Event) {}
}

message FooEvent {
  string foo = 1;
}

message BarEvent {
  string bar = 1;
}

message Event {
  oneof kind {
    FooEvent foo_event = 1;
    BarEvent bar_event = 2;
    // add more event here
  }
}

message Empty {}

message PublishRequest {
  string topic = 1;
  Event event = 2;
}

message SubscribeRequest {
  string topic = 1;
}
